--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body id="top">
-<!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade
-    your browser</a> to improve your experience.</p>
-<![endif]-->
 <section class="hero">
     <section class="navigation">
         <header>
@@ -53,7 +49,7 @@
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#map" class="login">Location</a></li>
-                            <li><a href="#rsvp" class="btn-white btn-small">Segna sul calendario! :)</a></li>
+                            <li><a href="#rsvp" class="btn-white btn-small">Segna sul calendario la data! :)</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -87,7 +83,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>Ci sposiamo!</h3>
-                <p>La data è il 20 di Dicembre e vorremmo che tu ne facessi parte
+                <p>Il giorno del matrimonio è il 20 di Dicembre e vorremmo che tu ne facessi parte!
                 </p>
             </div>
         </div>
@@ -107,15 +103,15 @@
                 <p>
                     Tanto tempo fa... nel lontano 2012 eravamo a Praga, eh si. Un tarantino ed una leccese a Praga.
                     Tra la tanta gente che abbiamo conosciuto (essendo deficienti cronici con i miei amici del cuore), c'era anche questo gruppo di ragazze di una scuola leccese, Galatina!
-                    Bene, tra le 7/8 ragazze presenti [io ero per le scale, (appena uscito da una spa come i veri vip) la compagnia leccese, invece, sul piano], parlammo, facemmo battute in entrambi i dialetti... Ma l'unica persona che mi guardava (per una buona mezzoretta), e mi sorrideva ininterrottamente senza dire una parola, era Marta. Non disse una parola! Ci credete, proprio Marta la chiacchierona?<br> <strong>Marta</strong>... si, dopo pochi giorni, ho deciso che quel nome lo avrei voluto pronunciare ogni giorno.<br>
-                    Bhe, poi il resto potete immaginarlo... <span style='font-size:20px;'>&#128580;</span>
+                    Bene, tra le 7/8 ragazze presenti [io ero per le scale, (appena uscito da una spa come i veri vip) la compagnia leccese, invece, sul piano], parlammo, facemmo battute in entrambi i dialetti... Ma l'unica persona che mi guardava (per una buona mezzoretta), e mi sorrideva ininterrottamente senza dire una parola, era Marta. Non disse una parola! Ci credete, proprio Marta la chiacchierona?<br> <strong>Marta</strong>... si, dopo pochi giorni, (quando lei, dopo poche telefonate, prese una scheda con chiamate infinite verso UN numero... il mio) decisi che quel nome lo avrei voluto pronunciare ogni giorno.<br>
+                    Bhe, poi il resto è venuto da se e potete immaginarlo... <span style='font-size:20px;'>&#128580;</span>
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/right.jpg" class="wp2"></div>
         </div>
         <div class="row">
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/5.jpeg" class="wp8"></div>
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/5.jpeg" class="wp9"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/left.png" class="wp8"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/right.jpg" class="wp9"></div>
         </div>
     </div>
 </section>
