--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/right.jpg" class="wp2"></div>
         </div>
         <div class="row">
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/left.jpg" class="wp8"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/left.ppg" class="wp8"></div>
             <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/right.jpg" class="wp9"></div>
         </div>
     </div>
