Added url to maps

--- a/index.html
+++ b/index.html
@@ -329,10 +329,9 @@
                     </div>
                     <div class="row text-center">
                         <div class="col-md-6" style="padding: 5px;">
-                            <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Guidami al ristorante</a> 
-                            <!-- Bottone o apre una modale/nuova finestra oppure visualizza un'immagine della mappa -->
-                            <form action="https://www.google.it/maps/place/Villa+Vergine+Srl/@40.1162022,18.1628033,17z/data=!3m1!4b1!4m5!3m4!1s0x134418dd7729fee1:0xd0869e773dec6348!8m2!3d40.1162022!4d18.164992">
-                                <input type="submit" value="Guidami" />
+                            <form action="https://www.google.it/maps/place/Villa+Vergine+Srl/@40.1162022,18.1628033,17z/data=!3m1!4b1!4m5!3m4!1s0x134418dd7729fee1:0xd0869e773dec6348!8m2!3d40.1162022!4d18.164992"
+                            >
+                                <input class="btn btn-accent btn-small" id="btn-show-map" type="submit" value="Guidami al ristorante"/>
                             </form>                            
                         </div>
                     </div>
