--- a/index.html
+++ b/index.html
@@ -318,7 +318,11 @@
                             <p>
                                 Strada Provinciale Collepasso Noha, 73020 Cutrofiano LE
                             </p>
-                            <p>40.10565547607605, 18.164790640647755</p>
+                            <p> <form action="https://www.google.it/maps/place/Villa+Vergine+Srl/@40.1162022,18.1628033,17z/data=!3m1!4b1!4m5!3m4!1s0x134418dd7729fee1:0xd0869e773dec6348!8m2!3d40.1162022!4d18.164992"
+                                >
+                                    <input class="btn btn-accent btn-small" type="submit" class="fa fa-map-marker" value="40.116241, 18.165005"/>
+                                </form>  
+                            </p>
                         </div>
                         <div class="col-md-6">
                             <h5>Andrea - Marta</h5>
@@ -331,7 +335,7 @@
                         <div class="col-md-6" style="padding: 5px;">
                             <form action="https://www.google.it/maps/place/Villa+Vergine+Srl/@40.1162022,18.1628033,17z/data=!3m1!4b1!4m5!3m4!1s0x134418dd7729fee1:0xd0869e773dec6348!8m2!3d40.1162022!4d18.164992"
                             >
-                                <input class="btn btn-accent btn-small" id="btn-show-map" type="submit" value="Guidami al ristorante"/>
+                                <input class="btn btn-accent btn-small" class="fa fa-map-marker" type="submit" value="Guidami al ristorante"/>
                             </form>                            
                         </div>
                     </div>
