--- a/index.html
+++ b/index.html
@@ -318,11 +318,6 @@
                             <p>
                                 Strada Provinciale Collepasso Noha, 73020 Cutrofiano LE
                             </p>
-                            <p> <form action="https://www.google.it/maps/place/Villa+Vergine+Srl/@40.1162022,18.1628033,17z/data=!3m1!4b1!4m5!3m4!1s0x134418dd7729fee1:0xd0869e773dec6348!8m2!3d40.1162022!4d18.164992"
-                                >
-                                    <input class="btn btn-accent btn-small" type="submit" class="fa fa-map-marker" value="40.116241, 18.165005"/>
-                                </form>  
-                            </p>
                         </div>
                         <div class="col-md-6">
                             <h5>Andrea - Marta</h5>
@@ -331,8 +326,13 @@
                             </p>
                         </div>
                     </div>
+                    <p> <form action="https://www.google.it/maps/place/Villa+Vergine+Srl/@40.1162022,18.1628033,17z/data=!3m1!4b1!4m5!3m4!1s0x134418dd7729fee1:0xd0869e773dec6348!8m2!3d40.1162022!4d18.164992"
+                        >
+                            <input class="btn btn-accent btn-small" type="submit" class="fa fa-map-marker" value="40.116241, 18.165005"/>
+                        </form>  
+                    </p>
                     <div class="row text-center">
-                        <div class="col-md-6" style="padding: 5px;">
+                        <div class="col-md-6">
                             <form action="https://www.google.it/maps/place/Villa+Vergine+Srl/@40.1162022,18.1628033,17z/data=!3m1!4b1!4m5!3m4!1s0x134418dd7729fee1:0xd0869e773dec6348!8m2!3d40.1162022!4d18.164992"
                             >
                                 <input class="btn btn-accent btn-small" class="fa fa-map-marker" type="submit" value="Guidami al ristorante"/>
