--- a/index.html
+++ b/index.html
@@ -321,14 +321,13 @@
                         </div>
                         <div class="col-md-6">
                             <h5>Andrea - Marta</h5>
-                            <p><i class="fa fa-mobile"></i> <a href="tel://++393425254757">+39 3425254757</a><br>
-                                <i class="fa fa-mobile"></i> <a href="tel://+393425653425">+39 3425653425</a></p>
-                            </p>
+                            <i class="fa fa-mobile"></i> <a href="tel://++393425254757">+39 3425254757</a><br>
+                                <i class="fa fa-mobile"></i> <a href="tel://+393425653425">+39 3425653425</a>
                         </div>
                     </div>
-                    <p> <form action="https://www.google.it/maps/place/Villa+Vergine+Srl/@40.1162022,18.1628033,17z/data=!3m1!4b1!4m5!3m4!1s0x134418dd7729fee1:0xd0869e773dec6348!8m2!3d40.1162022!4d18.164992"
+                    <p> <form action="https://www.google.it/maps/place/Chiesa+Madre+dei+Santi+Pietro+e+Paolo/@40.174259,18.1675856,17z/data=!3m1!4b1!4m5!3m4!1s0x13442240fb0de117:0x1186049006435af3!8m2!3d40.17426!4d18.1697876"
                         >
-                            <input class="btn btn-accent btn-small" type="submit" class="fa fa-map-marker" value="40.116241, 18.165005"/>
+                            <input class="btn btn-accent btn-small" type="submit" class="fa fa-map-marker" value="Portami in chiesa"/>
                         </form>  
                     </p>
                     <div class="row text-center">
