Various fix index.html

--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
                     <p><strong>20 Dicembre mattina</strong></p>
 
                     <h5>Celebrazione in chiesa <span class="time">10:30</span></h5>
+                    <a href="https://it.wikipedia.org/wiki/Chiesa_dei_Santi_Pietro_e_Paolo_(Galatina)"><strong>Chiesa madre Galatina</strong></a>
+                    <br><br>
                     <p>
                         E' il momento più importante del matrimonio. Lo abbiamo tanto atteso, e dopo tanti anni lontani, mille difficoltà e tanti sacrifici, ce l'abbiamo fatta.
                     </p>
@@ -139,10 +141,13 @@
                     <p><strong>20 Dicembre pomeriggio/sera</strong></p>
 
                     <h5>Ristorante <span class="time">13:00</span></h5>
+                    <a href="https://www.villavergine.it/"><strong>Villa Vergine</strong></a>
+                    <br><br>
                     <p>
                         Poco da dire, ci auguriamo che sia una giornata che ci unisca, tutti... quantomeno in famiglia.
                         Che ci faccia divertire, e che sia... indimenticabile!
                     </p>
+
                 </div>
             </div>
         </div>
@@ -299,7 +304,7 @@
 
 <section id="map" class="section-padding">
     <div class="text-center">
-        <h3>Come arrivo al ristorante?</h3>
+        <h3>Come arrivo?</h3>
         <p>Indicazioni in basso</p>
     </div>
     <div id="map-canvas"></div>
@@ -321,7 +326,7 @@
                         </div>
                         <div class="col-md-6">
                             <h5>Andrea - Marta</h5>
-                            <i class="fa fa-mobile"></i> <a href="tel://++393425254757">+39 3425254757</a><br>
+                            <i class="fa fa-mobile"></i> <a href="tel://++393425254757">+39 3425254757</a><br><br>
                                 <i class="fa fa-mobile"></i> <a href="tel://+393425653425">+39 3425653425</a>
                         </div>
                     </div>
@@ -373,7 +378,7 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-envelope"></i><input type="Email" name="email" class=""
+                                <i class="fa fa-envelope"></i><input type="Email" name="Email" class=""
                                                                      placeholder="email"
                                                                      required>
                             </div>
