styles and logos

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <section class="navigation">
         <header>
             <div class="header-content">
-                <div class="logo"><a href="#"><img src="img/logo-small.png" style="width: 50px; height: 30px" alt="Logo"></a></div>
+                <div class="logo"><a href="#"><img src="img/small2.png" style="height: 25px"></a></div>
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
-                            <li><a href="#intro">Come ci siamo conosciuti?</a></li>
+                            <li><a href="#intro">Primo incontro!</a></li>
                             <li><a href="#events">Il giorno dei giorni</a></li>
                             <li><a href="#instagram">Instagram</a></li>
                             <li><a href="#eng-pics">Un po' di noi</a></li>
@@ -63,7 +63,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
-                    <img src="img/logo-lg.png">
+                    <img src="img/test3.png">
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
                 </div>
             </div>
@@ -94,7 +94,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Come ci siamo conosciuti?</h3>
+                <h3 class="header">Primo incontro!</h3>
             </div>
         </div>
         <div class="row">
@@ -147,7 +147,6 @@
                         Poco da dire, ci auguriamo che sia una giornata che ci unisca, tutti... quantomeno in famiglia.
                         Che ci faccia divertire, e che sia... indimenticabile!
                     </p>
-
                 </div>
             </div>
         </div>
@@ -378,8 +377,8 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-envelope"></i><input type="Email" name="Email" class=""
-                                                                     placeholder="email"
+                                <i class="fa fa-envelope"></i><input type="Email" name="email" class=""
+                                                                     placeholder="Email"
                                                                      required>
                             </div>
                         </div>
@@ -391,16 +390,20 @@
                             </div>
                         </div>
                     </div>
+                    
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
+                            <!--
                             <div class="form-input-group">
                                 <i class="fa fa-users"></i><input type="number" name="extras" class="" min="0"
                                                                   max="10"
                                                                   placeholder="Moglie/marito e/o bambini"
                                                                   required>
                             </div>
+                            -->
                         </div>
-                        <div class="col-md-6 col-sm-6">
+                    <!-- INVITE CODE COMMENTED
+                            <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
                                 <i class="fa fa-key"></i><input type="number" name="invite_code" id="invite_code"
                                                                 class="" min="0"
@@ -408,6 +411,7 @@
                                                                 required>
                             </div>
                         </div>
+                    -->
                     </div>
                     <div class="row">
                         <div class="col-md-12" id="alert-wrapper"></div>
