--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="manifest.json">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <link rel="stylesheet" href="css/normalize.min.css">
@@ -84,7 +82,11 @@
             <div class="col-md-12 text-center">
                 <h3>Ci sposiamo!</h3>
                 <p>Il giorno del matrimonio è il 20 di Dicembre e vorremmo che tu ne facessi parte!
-                </p>
+                </p>    
+            </div>
+            <div>
+                <a href="img/eng_pics/logo-old-new.jpg"><img src="img/eng_pics/logo-old-new.jpg" style="display: block;margin-left:auto;margin-right: auto;"/>
+                </a>
             </div>
         </div>
     </div>
@@ -245,16 +247,6 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/logo-old.jpg">
-                    <div class="img-wrap">
-                        <div class="overlay">
-                            <i class="fa fa-search"></i>
-                        </div>
-                        <img src="img/eng_pics/logo-old.jpg" alt=""/>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/4.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -265,12 +257,52 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/5.jpeg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/.jpg" alt=""/>
+                        <img src="img/eng_pics/5.jpeg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/6.jpeg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/6.jpeg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/7.jpeg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/7.jpeg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/8.jpeg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/8.jpeg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/9.jpeg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/9.jpeg" alt=""/>
                     </div>
                 </a>
             </div>
