First try audio background

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="col-md-12 text-center">
                 <h3>Ci sposiamo!</h3>
                 <p>Il giorno del matrimonio è il 20 di Dicembre e vorremmo che tu ne facessi parte!
-                </p>    
+                </p>
             </div>
             <div>
                 <a href="img/eng_pics/logo-old-new.jpg"><img src="img/eng_pics/logo-old-new.jpg" style="display: block;margin-left:auto;margin-right: auto;"/>
@@ -306,6 +306,26 @@
                     </div>
                 </a>
             </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/11.jpeg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/11.jpeg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/12.jpeg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/12.jpeg" alt=""/>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
     <div class="container">
@@ -496,5 +516,14 @@
     ga('create', 'UA-46465113-4', 'auto');
     ga('send', 'pageview');
 </script>
+
+    <audio autoplay>
+        <source src="img/music/Perfect-cut.mp3" type="audio/mpeg" />
+    </audio>
+    <!-- 
+    <audio loop="loop" autoplay="autoplay">
+        <source src="NyanCat.mp3" type="audio/mpeg" />
+    </audio>
+    -->
 </body>
 </html>
