Added embedded music

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>Ci sposiamo!</h3>
+                <embed src="img/music/Perfect-cut.mp3" autostart="true" loop="true" width="2" height="0">
+                </embed>
                 <p>Il giorno del matrimonio è il 20 di Dicembre e vorremmo che tu ne facessi parte!
                 </p>
             </div>
@@ -516,14 +518,5 @@
     ga('create', 'UA-46465113-4', 'auto');
     ga('send', 'pageview');
 </script>
-
-    <audio autoplay>
-        <source src="img/music/Perfect-cut.mp3" type="audio/mpeg" />
-    </audio>
-    <!-- 
-    <audio loop="loop" autoplay="autoplay">
-        <source src="NyanCat.mp3" type="audio/mpeg" />
-    </audio>
-    -->
 </body>
 </html>
