--- a/index.html
+++ b/index.html
@@ -81,8 +81,11 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>Ci sposiamo!</h3>
-                <embed src="img/music/Perfect-cut.mp3" autostart="true" loop="true" width="2" height="0">
+                <audio src="img/music/ennio_morricone.mp3" autoplay="true" loop="true" controls></audio> 
                 </embed>
+                <h3 class="header">SOUND ON!</h3>
+                <br>
+
                 <p>Il giorno del matrimonio è il 20 di Dicembre e vorremmo che tu ne facessi parte!
                 </p>
             </div>
@@ -239,12 +242,12 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/1.jpeg">
+                <a class="fancybox" rel="group" href="img/eng_pics/6.jpeg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/1.jpeg" alt=""/>
+                        <img src="img/eng_pics/6.jpeg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -269,22 +272,22 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/6.jpeg">
+                <a class="fancybox" rel="group" href="img/eng_pics/1.jpeg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/6.jpeg" alt=""/>
+                        <img src="img/eng_pics/1.jpeg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/7.jpeg">
+                <a class="fancybox" rel="group" href="img/eng_pics/11.jpeg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/7.jpeg" alt=""/>
+                        <img src="img/eng_pics/11.jpeg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -309,12 +312,12 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/11.jpeg">
+                <a class="fancybox" rel="group" href="img/eng_pics/7.jpeg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/11.jpeg" alt=""/>
+                        <img src="img/eng_pics/7.jpeg" alt=""/>
                     </div>
                 </a>
             </div>
