--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
                 <h3>Ci sposiamo!</h3>
                 <audio src="img/music/ennio_morricone.mp3" autoplay="true" loop="true" controls></audio> 
                 </embed>
-                <h3 class="header">SOUND ON!</h3>
+                <h3  style="box-shadow: inset 0 0 120px #000, inset 0 0 80px #000, inset 0 0 40px #000; color: #e8ca6f;">SOUND ON!</h3>
                 <br>
-
                 <p>Il giorno del matrimonio è il 20 di Dicembre e vorremmo che tu ne facessi parte!
                 </p>
             </div>
