--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </p>
             </div>
             <div>
-                <a href="img/eng_pics/logo-old-new.jpg"><img src="img/eng_pics/logo-old-new.jpg" style="display: block;margin-left:auto;margin-right: auto;"/>
+                <img src="img/eng_pics/logo-old-new.jpg" style="display: block;margin-left:auto;margin-right: auto; width:390px"/>
                 </a>
             </div>
         </div>
@@ -126,7 +126,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="header">Events</h3>
+                <h3 class="header">Il giorno dei giorni</h3>
             </div>
         </div>
         <div class="row">
