--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                     <p>
                         Poco da dire, ci auguriamo che sia una giornata che ci unisca, tutti... quantomeno in famiglia.
                         Che ci faccia divertire, e che sia... indimenticabile!
+                        <p style="font-size: 12px;"><i>Per <b>intolleranze o preferenze</b> durante il pranzo, preghiamo di comunicarcelo via <b>Whatsapp</b></i></p>
                     </p>
                 </div>
             </div>
@@ -382,7 +383,7 @@
                         <div class="col-md-6">
                             <h5>Andrea - Marta</h5>
                             <i class="fa fa-mobile"></i> <a href="tel://++393425254757">+39 3425254757</a><br><br>
-                                <i class="fa fa-mobile"></i> <a href="tel://+393425653425">+39 3425653425</a>
+                            <i class="fa fa-mobile"></i> <a href="tel://+393425653425">+39 3425653425</a>
                         </div>
                     </div>
                     <p> <form action="https://www.google.it/maps/place/Chiesa+Madre+dei+Santi+Pietro+e+Paolo/@40.174259,18.1675856,17z/data=!3m1!4b1!4m5!3m4!1s0x13442240fb0de117:0x1186049006435af3!8m2!3d40.17426!4d18.1697876"
