Input invite code not editable

--- a/index.html
+++ b/index.html
@@ -459,16 +459,14 @@
                             </div>
                             -->
                         </div>
-                    <!-- INVITE CODE COMMENTED
                             <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-key"></i><input type="number" name="invite_code" id="invite_code"
+                                <i class="fa fa-key"></i><input type="number" value="271117" readonly name="invite_code" id="invite_code"
                                                                 class="" min="0"
                                                                 placeholder="Invite code"
                                                                 required>
                             </div>
                         </div>
-                    -->
                     </div>
                     <div class="row">
                         <div class="col-md-12" id="alert-wrapper"></div>
