Added link to whatsapp

--- a/index.html
+++ b/index.html
@@ -152,7 +152,10 @@
                     <p>
                         Poco da dire, ci auguriamo che sia una giornata che ci unisca, tutti... quantomeno in famiglia.
                         Che ci faccia divertire, e che sia... indimenticabile!
-                        <p style="font-size: 12px;"><i>Per <b>intolleranze o preferenze</b> durante il pranzo, preghiamo di comunicarcelo via <b>Whatsapp</b></i></p>
+                        <p style="font-size: 12px;">
+                            <i>Per <b>intolleranze o preferenze</b> durante il pranzo, preghiamo di comunicarcelo via <a href="#map" class="login">Whatsapp</a>
+                            </i>
+                        </p>
                     </p>
                 </div>
             </div>
