--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="manifest" href="manifest.json">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -81,8 +80,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>Ci sposiamo!</h3>
-                <audio src="img/music/ennio_morricone.mp3" autoplay="true" loop="true" controls></audio> 
-                </embed>
+                <audio src="img/music/ennio_morricone.mp3" autoplay="true" loop="true" controls></audio>              
                 <h3  style="box-shadow: inset 0 0 120px #000, inset 0 0 80px #000, inset 0 0 40px #000; color: #e8ca6f;">SOUND ON!</h3>
                 <br>
                 <p>Il giorno del matrimonio è il 20 di Dicembre e vorremmo che tu ne facessi parte!
@@ -202,8 +200,8 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>Noi...</h3> <!--TODO FIX URL INSTAGRAM-->
-                <p>Aiutaci a ricordare il momento, usa il tag #marta&andrea
-                    <a href="https://instagram.com/explore/tags/#marta&andrea/" target="_blank">#marta&andrea</a>
+                <p>Aiutaci a ricordare il momento, usa il tag #marta&andreasposi
+                    <a href="https://instagram.com/explore/tags/#marta&andreasposi/" target="_blank">#marta&andreasposi</a>
                 </p>
             </div>
         </div>
@@ -396,7 +394,7 @@
                     </p>
                     <div class="row text-center">
                         <div class="col-md-6">
-                            <form action="https://www.google.it/maps/place/Villa+Vergine+Srl/@40.1162022,18.1628033,17z/data=!3m1!4b1!4m5!3m4!1s0x134418dd7729fee1:0xd0869e773dec6348!8m2!3d40.1162022!4d18.164992"
+                            <form action="https://www.google.it/maps/place/40%C2%B006'56.2%22N+18%C2%B009'55.7%22E/@40.1156131,18.1632824,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d40.1156131!4d18.1654711?"
                             >
                                 <input class="btn btn-accent btn-small" class="fa fa-map-marker" type="submit" value="Guidami al ristorante"/>
                             </form>                            
@@ -505,7 +503,7 @@
 <script src="js/vendor/ouical.js"></script>
 <script src="js/scripts.min.js"></script>
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlPw3GQYI3faa_9mRE6plWuM7xNEmrwH0&callback=initMap"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaP_RKUpFOXx67koEu5_nG07dD_Q4jvyA&callback=initMap"></script>
 <!-- Google Analytics -->
 <script>
     (function (i, s, o, g, r, a, m) {
