--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
 </section>
 
-<section class="events section-padding" id="events">
+<section class="events section-padding" id="events" style="background-image: linear-gradient( #FFFFFF 0%, #AACFEF 100%)">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -364,7 +364,7 @@
         <h3>Come arrivo?</h3>
         <p>Indicazioni in basso</p>
     </div>
-    <div id="map-canvas"></div>
+    <div id="map-canvas" style="background-image: linear-gradient( #FFFFFF 0%, #AACFEF 100%)"></div>
     <div id="map-content-wrapper" class="container pointer-events-none">
         <div class="row">
             <div class="col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-6">
