--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="col-md-12 text-center">
                 <h3>Ci sposiamo!</h3>
                 <audio src="img/music/ennio_morricone.mp3" autoplay="true" loop="true" controls></audio>              
-                <h3  style="box-shadow: inset 0 0 120px #000, inset 0 0 80px #000, inset 0 0 40px #000; color: #e8ca6f;">SOUND ON!</h3>
+                <h3  style="box-shadow: inset 0 0 120px #000, inset 0 0 80px #000, inset 0 0 40px #000; color: #DAA520;">SOUND ON!</h3>
                 <br>
                 <p>Il giorno del matrimonio è il 20 di Dicembre e vorremmo che tu ne facessi parte!
                 </p>
@@ -120,7 +120,7 @@
     </div>
 </section>
 
-<section class="events section-padding" id="events" style="background-image: linear-gradient( #FFFFFF 0%, #AACFEF 100%)">
+<section class="events section-padding" id="events" style="background-image: linear-gradient( #FFFFFF 0%, #AACFEF 120%)">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -133,7 +133,7 @@
                     <p><strong>20 Dicembre mattina</strong></p>
 
                     <h5>Celebrazione in chiesa <span class="time">10:30</span></h5>
-                    <a href="https://it.wikipedia.org/wiki/Chiesa_dei_Santi_Pietro_e_Paolo_(Galatina)"><strong>Chiesa madre Galatina</strong></a>
+                    <a href="https://it.wikipedia.org/wiki/Chiesa_dei_Santi_Pietro_e_Paolo_(Galatina)" style="color: #DAA520;"><strong><b>Chiesa madre Galatina</b></strong></a>
                     <br><br>
                     <p>
                         E' il momento più importante del matrimonio. Lo abbiamo tanto atteso, e dopo tanti anni lontani, mille difficoltà e tanti sacrifici, ce l'abbiamo fatta.
@@ -145,13 +145,13 @@
                     <p><strong>20 Dicembre pomeriggio/sera</strong></p>
 
                     <h5>Ristorante <span class="time">13:00</span></h5>
-                    <a href="https://www.villavergine.it/"><strong>Villa Vergine</strong></a>
+                    <a href="https://www.villavergine.it/" style="color: #DAA520;"><strong><b>Villa Vergine</b></strong></a>
                     <br><br>
                     <p>
                         Poco da dire, ci auguriamo che sia una giornata che ci unisca, tutti... quantomeno in famiglia.
                         Che ci faccia divertire, e che sia... indimenticabile!
                         <p style="font-size: 12px;">
-                            <i>Per <b>intolleranze o preferenze</b> durante il pranzo, preghiamo di comunicarcelo via <a href="#map" class="login">Whatsapp</a>
+                            <i>Per <b>intolleranze o preferenze</b> durante il pranzo, preghiamo di comunicarcelo via <a href="#map" style="color: #DAA520" class="login"  ><b> WHATSAPP</b></a>
                             </i>
                         </p>
                     </p>
@@ -160,7 +160,7 @@
         </div>
         <div class="row section-padding">
             <div class="col-md-4 col-md-offset-4 text-center">
-                <a class="btn btn-accent btn-small" data-toggle="modal" data-target="#dc-modal">
+                <a class="btn btn-accent btn-small" style="color: #DAA520" data-toggle="modal" data-target="#dc-modal">
                     <i class="fa fa-barcode"></i>&nbsp;&nbsp;Click se hai già fame
                 </a>
             </div>
@@ -201,7 +201,7 @@
             <div class="col-md-12 text-center">
                 <h3>Noi...</h3> <!--TODO FIX URL INSTAGRAM-->
                 <p>Aiutaci a ricordare il momento, usa il tag #marta&andreasposi
-                    <a href="https://instagram.com/explore/tags/#marta&andreasposi/" target="_blank">#marta&andreasposi</a>
+                    <a href="https://instagram.com/explore/tags/#marta&andreasposi/" style="color: #DAA520" target="_blank">#marta&andreasposi</a>
                 </p>
             </div>
         </div>
@@ -364,7 +364,7 @@
         <h3>Come arrivo?</h3>
         <p>Indicazioni in basso</p>
     </div>
-    <div id="map-canvas" style="background-image: linear-gradient( #FFFFFF 0%, #AACFEF 100%)"></div>
+    <div id="map-canvas" style="background-image: linear-gradient( #FFFFFF 0%, #AACFEF 120%)"></div>
     <div id="map-content-wrapper" class="container pointer-events-none">
         <div class="row">
             <div class="col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-6">
@@ -383,8 +383,8 @@
                         </div>
                         <div class="col-md-6">
                             <h5>Andrea - Marta</h5>
-                            <i class="fa fa-mobile"></i> <a href="tel://++393425254757">+39 3425254757</a><br><br>
-                            <i class="fa fa-mobile"></i> <a href="tel://+393425653425">+39 3425653425</a>
+                            <i class="fa fa-mobile"></i> <a href="tel://++393425254757"><b>+39 3425254757</b></a><br><br>
+                            <i class="fa fa-mobile"></i> <a href="tel://+393425653425"><b>+39 3425653425</b></a>
                         </div>
                     </div>
                     <p> <form action="https://www.google.it/maps/place/Chiesa+Madre+dei+Santi+Pietro+e+Paolo/@40.174259,18.1675856,17z/data=!3m1!4b1!4m5!3m4!1s0x13442240fb0de117:0x1186049006435af3!8m2!3d40.17426!4d18.1697876"
