--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
 </section>
 
-<section class="events section-padding" id="events" style="background-image: linear-gradient( #FFFFFF 0%, #AACFEF 120%)">
+<section class="events section-padding" id="events" style="background-image: linear-gradient( #FFFFFF 0%, #0ABAB5 120%)">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -364,8 +364,8 @@
         <h3>Come arrivo?</h3>
         <p>Indicazioni in basso</p>
     </div>
-    <div id="map-canvas" style="background-image: linear-gradient( #FFFFFF 0%, #AACFEF 120%)"></div>
-    <div id="map-content-wrapper" class="container pointer-events-none">
+    <div id="map-canvas" style="background-image: linear-gradient( #FFFFFF 0%, #0ABAB5 120%)"></div>
+    <div id="map-content-wrapper"  class="container pointer-events-none">
         <div class="row">
             <div class="col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-6">
                 <div class="text-center">
@@ -373,7 +373,7 @@
                         <i class="fa fa-info-circle"></i>&nbsp;&nbsp; Show info
                     </div>
                 </div>
-                <div id="map-content" class="pointer-events-auto">
+                <div id="map-content" style="background: #0000;opacity: 1;" class="pointer-events-auto">
                     <div class="row">
                         <div class="col-md-6">
                             <h5>Villa Vergine</h5>
