--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
                     Bhe, poi il resto è venuto da se e potete immaginarlo... <span style='font-size:20px;'>&#128580;</span>
                 </p>
             </div>
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/right.jpg" class="wp2"></div>
+            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/right.jpg"  class="wp2">
+            </div>
         </div>
         <div class="row">
             <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/left.png" class="wp8"></div>
@@ -160,7 +161,7 @@
         </div>
         <div class="row section-padding">
             <div class="col-md-4 col-md-offset-4 text-center">
-                <a class="btn btn-accent btn-small" style="color: #FF6347" data-toggle="modal" data-target="#dc-modal">
+                <a class="btn btn-accent btn-small"  data-toggle="modal" data-target="#dc-modal">
                     <i class="fa fa-barcode"></i>&nbsp;&nbsp;<b>Click se hai già fame</b>
                 </a>
             </div>
