--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="col-md-12 text-center">
                 <h3>Ci sposiamo!</h3>
                 <audio src="img/music/perfect.mp3" autoplay="true" loop="true" controls></audio>              
-                <h3  style="box-shadow: inset 0 0 120px #000, inset 0 0 80px #000, inset 0 0 40px #000; color: #FF6347;">SOUND ON!</h3>
+                <h3  style="box-shadow: inset 0 0 120px #000, inset 0 0 80px #000, inset 0 0 40px #000; color: #0ABAB5;">SOUND ON!</h3>
                 <br>
                 <p>Il giorno del matrimonio è il 20 di Dicembre e vorremmo che tu ne facessi parte!
                 </p>
@@ -154,7 +154,7 @@
                     <p><strong>20 Dicembre mattina</strong></p>
 
                     <h5>Celebrazione in chiesa <span class="time">10:30</span></h5>
-                    <a href="https://it.wikipedia.org/wiki/Chiesa_dei_Santi_Pietro_e_Paolo_(Galatina)" style="color: #FF6347;"><strong><b>Chiesa Madre dei Santi Pietro e Paolo</b></strong></a>
+                    <a href="https://it.wikipedia.org/wiki/Chiesa_dei_Santi_Pietro_e_Paolo_(Galatina)" style="color: #5151fb;"><strong><b>Chiesa Madre dei Santi Pietro e Paolo</b></strong></a>
                     <br><br>
                     <p>
                         E' il momento più importante del matrimonio. Lo abbiamo tanto atteso, e dopo tanti anni lontani, mille difficoltà e tanti sacrifici, ce l'abbiamo fatta.
@@ -166,13 +166,13 @@
                     <p><strong>20 Dicembre pomeriggio/sera</strong></p>
 
                     <h5>Ristorante <span class="time">13:00</span></h5>
-                    <a href="https://www.villavergine.it/" style="color: #FF6347;"><strong><b>Villa Vergine</b></strong></a>
+                    <a href="https://www.villavergine.it/" style="color: #5151fb;"><strong><b>Villa Vergine</b></strong></a>
                     <br><br>
                     <p>
                         Poco da dire, ci auguriamo che sia una giornata che ci unisca, tutti... quantomeno in famiglia.
                         Che ci faccia divertire, e che sia... indimenticabile!
                         <p style="font-size: 12px;">
-                            <i>Per <b>intolleranze o preferenze</b> durante il pranzo, preghiamo di comunicarcelo via <a href="#map" style="color: #FF6347" class="login"  ><b> WHATSAPP</b></a>
+                            <i>Per <b>intolleranze o preferenze</b> durante il pranzo, preghiamo di comunicarcelo via <a href="#map" style="color: #5151fb" class="login"  ><b> WHATSAPP</b></a>
                             </i>
                         </p>
                     </p>
@@ -222,7 +222,7 @@
             <div class="col-md-12 text-center">
                 <h3>Noi...</h3> <!--TODO FIX URL INSTAGRAM-->
                 <p>Aiutaci a ricordare il momento, usa il tag #marta&andreasposi
-                    <a href="https://instagram.com/explore/tags/#marta&andreasposi/" style="color: #FF6347" target="_blank">#marta&andreasposi</a>
+                    <a href="https://instagram.com/explore/tags/#marta&andreasposi/" style="color: #5151fb" target="_blank">#marta&andreasposi</a>
                 </p>
             </div>
         </div>
