--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                             -->
                         </div>
                             <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
+                            <div class="form-input-group" style="display: none;">
                                 <i class="fa fa-key"></i><input type="number" value="271117" readonly name="invite_code" id="invite_code"
                                                                 class="" min="0"
                                                                 placeholder="Invite code"
