--- a/index.html
+++ b/index.html
@@ -126,9 +126,8 @@
             <div class="col-md-6">
                 <p>
                     Tanto tempo fa... nel lontano 2012 eravamo a Praga, eh si. Un tarantino ed una leccese a Praga.
-                    Tra la tanta gente che abbiamo conosciuto (essendo deficienti cronici con i miei amici del cuore), c'era anche questo gruppo di ragazze di una scuola leccese, Galatina!
-                    Bene, tra le 7/8 ragazze presenti [io ero per le scale, (appena uscito da una spa come i veri vip) la compagnia leccese, invece, sul piano], parlammo, facemmo battute in entrambi i dialetti... Ma l'unica persona che mi guardava (per una buona mezzoretta), e mi sorrideva ininterrottamente senza dire una parola, era Marta. Non disse una parola! Ci credete, proprio Marta la chiacchierona?<br> <strong>Marta</strong>... si, dopo pochi giorni, (quando lei, dopo poche telefonate, prese una scheda con chiamate infinite verso UN numero... il mio) decisi che quel nome lo avrei voluto pronunciare ogni giorno.<br>
-                    Bhe, poi il resto è venuto da se e potete immaginarlo... <span style='font-size:20px;'>&#128580;</span>
+                    Tra la tanta gente che abbiamo conosciuto, c'era anche questo gruppo di ragazze di una scuola leccese, Galatina!
+                    Bene, tra le 7/8 ragazze presenti [io ero per le scale, (appena uscito da una spa come i veri vip) la compagnìa leccese, invece, sul piano], parlammo, facemmo battute in entrambi i dialetti... Ma l'unica persona che mi guardava (per una buona mezzoretta), e mi sorrideva ininterrottamente senza dire una parola, era Marta. Non disse una parola! Ci credete, proprio Marta la chiacchierona?<br> <strong>Marta</strong>... si, qualche settimane dopo, (quando lei, dopo poche telefonate, prese una scheda con chiamate infinite verso UN numero... il mio) decisi che quel nome lo avrei voluto pronunciare ogni giorno.<br>
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/right.jpg"  class="wp2">
