--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>Ci sposiamo!</h3>
-                <audio src="img/music/allofme.mp3" autoplay="true" loop="true" controls></audio>              
+                <audio src="img/music/ennio_morricone.mp3" autoplay="true" loop="true" controls></audio>              
                 <h3  style="box-shadow: inset 0 0 120px #000, inset 0 0 80px #000, inset 0 0 40px #000; color: #0ABAB5;">SOUND ON!</h3>
                 <br>
                 <p>Il giorno del matrimonio è il 20 di Dicembre e vorremmo che tu ne facessi parte!
