--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
         <div class="row">
             <div class="col-sm-4 hidden-xs"></div>
             <div class="col-sm-4 hidden-xs text-center"><a href="#rsvp"
-                                                           class="btn btn-accent btn-large rsvp-btn" style="font-size: 20px;";><b>Vuoi esserci?</b></a></div>
+                                                           class="btn btn-accent btn-large rsvp-btn" style="font-size: 20px; color:	#FFD700;";><b>Vuoi esserci?</b></a></div>
             <div class="col-sm-4 hidden-xs"></div>
         </div>
     </div>
-    <div class="down-arrow floating-arrow"><a href="#invitation"><i class="fa fa-angle-down"></i></a></div>
+    <div class="down-arrow floating-arrow"><a href="#invitation"><i class="fa fa-angle-down" style="color: #FFD700;"></i></a></div>
 </section>
 
 <section id="invitation" class="section-padding">
