Added section wedshoots

--- a/index.html
+++ b/index.html
@@ -215,12 +215,34 @@
 
 </section>
 
+<section id="wedshoot" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3>Album condiviso Wedshoots</h3> 
+                <p>Wedshoot mette a disposizione un album dove ognuno di noi potrà caricare le foto che verranno fatte il 20 Dicembre. Scaricate l'applicazione, riusciremo ad avere qualche ricordo in più di quel giorno &#128522; <br>Codice dell'album: <strong> ITaf14ce86</strong>
+                </p>
+            </div>
+        </div>
+        <div class="row section-border wp7">
+            <div class="col-md-4 col-md-offset-4">
+                 <!--Aggiungi URL all'album 
+                        <a href="https://instagram.com/explore/tags/#marta&andreasposi/" style="color: #5151fb" target="_blank">#marta&andreasposi</a>
+                    -->
+                <a href="https://www.matrimonio.com/tools/Wedshoots"><img src="img/wedshoot_OK.jpg" style="width: 100%; vertical-align: middle; border: 0; box-sizing: border-box;"
+                    alt="wedshoot pic"></a>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 <section id="instagram" class="section-padding">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>Noi...</h3> <!--TODO FIX URL INSTAGRAM-->
-                <p>Aiutaci a ricordare il momento, usa il tag #marta&andreasposi
+                <p>Aiutaci a ricordare il momento, usa il tag
                     <a href="https://instagram.com/explore/tags/#marta&andreasposi/" style="color: #5151fb" target="_blank">#marta&andreasposi</a>
                 </p>
             </div>
