Fix href wedshoots link

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>Album condiviso Wedshoots</h3> 
-                <p>Wedshoot mette a disposizione un album dove ognuno di noi potrà caricare le foto che verranno fatte il 20 Dicembre. Scaricate l'applicazione, riusciremo ad avere qualche ricordo in più di quel giorno &#128522; <br>Codice dell'album: <strong> ITaf14ce86</strong>
+                <p>Wedshoot mette a disposizione un album dove ognuno di noi potrà caricare le foto che verranno fatte il 20 Dicembre. Scaricate l'applicazione ed inserite il codice album, riusciremo ad avere qualche ricordo in più di quel giorno &#128522; <u style="font-size: 18px;"><br>Codice dell'album</u>: <strong style="font-size: 20px;"> ITaf14ce86</strong>
                 </p>
             </div>
         </div>
@@ -229,7 +229,7 @@
                  <!--Aggiungi URL all'album 
                         <a href="https://instagram.com/explore/tags/#marta&andreasposi/" style="color: #5151fb" target="_blank">#marta&andreasposi</a>
                     -->
-                <a href="https://www.matrimonio.com/tools/Wedshoots"><img src="img/wedshoot_OK.jpg" style="width: 100%; vertical-align: middle; border: 0; box-sizing: border-box;"
+                <a href="https://play.google.com/store/apps/details?id=net.bodas.android.wedshoots"><img src="img/wedshoot_OK.jpg" style="width: 100%; vertical-align: middle; border: 0; box-sizing: border-box;"
                     alt="wedshoot pic"></a>
             </div>
         </div>
