Changed rsvp button

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <div class="row">
             <div class="col-sm-4 hidden-xs"></div>
             <div class="col-sm-4 hidden-xs text-center"><a href="#rsvp"
-                                                           class="btn btn-accent btn-large rsvp-btn" style="font-size: 20px; color:	#FFD700;";><b>Vuoi esserci?</b></a></div>
+                                                           class="btn btn-accent btn-large rsvp-btn" style="font-size: 20px; color:	#FFD700;";><b>Vuoi esserci?</b></a>
+            </div>
             <div class="col-sm-4 hidden-xs"></div>
         </div>
     </div>
@@ -100,7 +101,6 @@
                 </div>
                 <table width="100%" cellspacing="0" cellpadding="0">
                     <tbody>
-                        <tr>
                             <td align="center"><img src="http://i.countdownmail.com/18irx8.gif" style="display:inline-block!important;padding-top: 20px;width:90%!important;max-width:600px!important;" border="0"/>
                             </td>
                         </tr>
@@ -544,9 +544,8 @@
                     <div class="row">
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
-                    <button class="btn-fill rsvp-btn">
-                        Yes,
-                        Ci sarò!
+                    <button style="background-color: white;color: #FFD700; border-color: #FFD700; font-weight: 700; font-size: 20px;" class="btn-fill rsvp-btn" >
+                        <b>Yes, Ci sarò!</b>
                     </button>
                 </form>
             </div>
