Fixed url wedshoots for android apple

--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
                     <p><strong>20 Dicembre mattina</strong></p>
 
                     <h5>Celebrazione in chiesa <span class="time">10:30</span></h5>
-                    <a href="https://it.wikipedia.org/wiki/Chiesa_dei_Santi_Pietro_e_Paolo_(Galatina)" style="color: #5151fb;"><strong><b>Chiesa Madre dei Santi Pietro e Paolo</b></strong></a>
+                    <a href="https://it.wikipedia.org/wiki/Chiesa_dei_Santi_Pietro_e_Paolo_(Galatina)" style="color: #5151fb;"><strong><b>Chiesa Madre dei Santi Pietro e Paolo</b></strong>
+                    </a>
                     <br><br>
                     <p>
                         E' il momento più importante del matrimonio. Lo abbiamo tanto atteso, e dopo tanti anni lontani, mille difficoltà e tanti sacrifici, ce l'abbiamo fatta.
@@ -222,15 +223,26 @@
                 <h3>Album condiviso Wedshoots</h3> 
                 <p>Wedshoot mette a disposizione un album dove ognuno di noi potrà caricare le foto che verranno fatte il 20 Dicembre. Scaricate l'applicazione ed inserite il codice album, riusciremo ad avere qualche ricordo in più di quel giorno &#128522; <u style="font-size: 18px;"><br>Codice dell'album</u>: <strong style="font-size: 20px;"> ITaf14ce86</strong>
                 </p>
-            </div>
+                <div>
+                    <a href="https://play.google.com/store/apps/details?id=net.bodas.android.wedshoots" style="color: #5151fb;"><strong><b>Download per Android</b></strong>
+                    </a>
+                </div>
+                <br>
+                <div>
+                    <a href="https://apps.apple.com/it/app/wedshoots/id660256196" style="color: #5151fb;"><strong><b>Download per Apple</b></strong>
+                    </a>
+                </div>
+        </div>
         </div>
         <div class="row section-border wp7">
             <div class="col-md-4 col-md-offset-4">
-                 <!--Aggiungi URL all'album 
-                        <a href="https://instagram.com/explore/tags/#marta&andreasposi/" style="color: #5151fb" target="_blank">#marta&andreasposi</a>
-                    -->
+                <!--
                 <a href="https://play.google.com/store/apps/details?id=net.bodas.android.wedshoots"><img src="img/wedshoot_OK.jpg" style="width: 100%; vertical-align: middle; border: 0; box-sizing: border-box;"
-                    alt="wedshoot pic"></a>
+                    alt="wedshoot pic">
+                -->
+                <a><img src="img/wedshoot_OK.jpg" style="width: 100%; vertical-align: middle; border: 0; box-sizing: border-box;"
+                    alt="wedshoot pic">
+                </a>
             </div>
         </div>
     </div>
